@@ -2,6 +2,7 @@
 
 Changed use of "/" in some places to use File.separator, so things work on windows.
 (Suggestion from Stefan Krecher)
+Modified stic usage message to use File.separator.
 
 
 07/09/2011 Changes
